# telegram-matching-bot

./: .dockerignore  .env.example  .gitignore  .hermes-orchestrator-skill.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/alerts/: dispatcher.py
app/api/routes/: auth.py  health.py  status.py
app/config/: __init__.py  compiler.py  hashing.py  loader.py  models.py
app/core/: __init__.py  app_state.py  models.py  security.py  settings.py
app/engine/: dedup.py  pipeline.py  rules.py
app/extraction/: extractor.py
app/normalization/: pipeline.py
app/storage/: database.py  models.py  repository.py
app/telegram/: client.py  client_state.py  mock_client.py
config/: watch.yaml
docs/: MVP_RUNBOOK.md  telegram_user_market_watch_agent_orchestrator_guide.md  telegram_user_market_watch_backlog.md  telegram_user_market_watch_project.md  telegram_user_market_watch_test_fixtures.md
docs/adr/: 0001-fastapi-lifespan.md  0002-telegram-user-client.md  0003-yaml-rules.md  0004-deterministic-rule-engine.md  0005-storage-mvp.md
tests/: conftest.py  test_fixtures_config.py  test_fixtures_extraction.py  test_fixtures_normalization.py  test_fixtures_rules.py  test_smoke.py  test_storage.py  test_telegram_client.py
tests/config/: test_loader.py
tests/engine/: test_pipeline.py  test_rules.py
tests/extraction/: test_extractor.py
tests/fixtures/: test_norm_runner.py
tests/fixtures/config/: watch_config.invalid_bad_threshold.yaml  watch_config.valid.yaml  (+2 more)
tests/normalization/: test_pipeline.py
(+4 files in other folders)
